2003-08-19  Joe English  <jenglish@users.sourceforge.net>
	* doc/bind.n: Added more information on event types and details
	[FRQ #523593 "bind(n) manpage needs more detail"]

2003-08-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/tcl.m4: Update from Tcl to fix
	Tcl bug 781109.

2003-08-15  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImgPhoto.c (ImgPhotoCmd): Faster color data parsing
	code for the [$photo put] subcommand.  Now doesn't do everything
	through the pre-8.0 list handling routines!

2003-08-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tkUnixButton.c (TkpDisplayButton): Stopped accesses to NULL
	* unix/tkUnixMenu.c (TkpDrawMenuEntry):   pointers that crashed tests.

	TIP #109 IMPLEMENTATION FROM Brian Griffin <bgriffin@model.com>
	* unix/tkUnixButton.c (TkpDrawCheckIndicator, TkpDisplayButton):
	* unix/tkUnixMenu.c (DrawMenuEntryIndicator, TkpDrawMenuEntry):
	Much improved display of checkbuttons and radiobuttons on UNIX/X.

2003-08-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/scale.tcl: Fix for bug #787065 for Button-2 press.
	* tests/scale.test:  Added test for this bug.

2003-08-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXMenu.c: fixed C99'ism that breaks gcc 2.95.

2003-07-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: Applied patch from bug #611615 which fixes a
	problem with double clicks in file dialogs falling through to the
	window underneath in win32.

	* library/panedwindow.tcl: Apply patch from bug #778893 to make
	the panedwindow -opaqueresize option work as per the docs.

	* library/tk.tcl: Apply fix for bug #778840 for window placement
	when using multiple desktops on windows.

2003-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c: Fix for bug #776646 for a native hand2 and
	fleur (move) cursor under win.
	* tests/cursor.test: Check that documented cursors are available.
