@@ -1,4 +1,9 @@
 2003-08-19  Joe English  <jenglish@users.sourceforge.net>
+	* generic/tkPanedWindow.c(PanedWindowWorldChanged):
+	Set window background from the -background resource.
+	Fixes [BUG #791500 "PanedWindow refresh glitches on X"]
+
+2003-08-19  Joe English  <jenglish@users.sourceforge.net>
 	* doc/bind.n: Added more information on event types and details
 	[FRQ #523593 "bind(n) manpage needs more detail"]
 
